rm files
